# informatics-tasks

./: .gitignore  CMakeLists.txt  README.md
labs/: CMakeLists.txt
labs/my_libs/: CMakeLists.txt
labs/my_libs/rectangle/: CMakeLists.txt  point.cpp  rectangle.cpp
labs/s3/: CMakeLists.txt  l10.cpp  l10_rect.cpp  l15.cpp  l20.cpp
labs/s4/: CMakeLists.txt  l10.cpp  l10plot.cpp
labs/s5/: CMakeLists.txt  l10.cpp  l10_rect.cpp  l20.cpp  testco.cpp
labs/s6/: CMakeLists.txt  l10.cpp  l10_rect.cpp  l20.cpp
test/: memcheck.cmake
